--- a/Filterer/Base.lproj/Main.storyboard
+++ b/Filterer/Base.lproj/Main.storyboard
@@ -19,6 +19,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scenery" translatesAutoresizingMaskIntoConstraints="NO" id="aND-Em-4Dd">
                                 <rect key="frame" x="0.0" y="20" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JNF-wb-wwY">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
@@ -120,6 +121,11 @@
                         <outlet property="editButton" destination="Lke-o3-UwZ" id="Or6-hb-cmC"/>
                         <outlet property="editMenu" destination="ufw-Gj-9YJ" id="5bP-x3-DX2"/>
                         <outlet property="filterButton" destination="C6B-1F-j0K" id="6Kf-1q-zun"/>
+                        <outlet property="filterButton1" destination="Drk-Kp-614" id="VfO-HH-Ybc"/>
+                        <outlet property="filterButton2" destination="axt-GK-a6m" id="pkR-Ae-ota"/>
+                        <outlet property="filterButton3" destination="x1p-Kd-OxD" id="CFH-Jo-m6u"/>
+                        <outlet property="filterButton4" destination="jJB-BV-FyE" id="aX7-QY-Rde"/>
+                        <outlet property="filterButton5" destination="gUZ-Ir-tNo" id="BP5-hu-cNu"/>
                         <outlet property="filterSlider" destination="ka8-Vg-kI7" id="ORA-cp-5WE"/>
                         <outlet property="imageView" destination="aND-Em-4Dd" id="vbi-rB-DhQ"/>
                         <outlet property="originalLabel" destination="94C-Vb-VjT" id="ihJ-Rr-UDo"/>
@@ -134,7 +140,7 @@
                         <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="n3M-NR-6VP">
                             <rect key="frame" x="0.0" y="-12" width="572" height="116"/>
                             <subviews>
-                                <button opaque="NO" contentMode="center" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Drk-Kp-614">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Drk-Kp-614">
                                     <rect key="frame" x="0.0" y="0.0" width="115" height="116"/>
                                     <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                     <state key="normal" image="AudioWave"/>
@@ -142,7 +148,7 @@
                                         <action selector="applyRedFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="adn-GS-dXd"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="center" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="axt-GK-a6m">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="axt-GK-a6m">
                                     <rect key="frame" x="115" y="0.0" width="115" height="116"/>
                                     <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                     <state key="normal" image="Filtration"/>
@@ -150,7 +156,7 @@
                                         <action selector="applyFilter2:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pJl-dp-zfw"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="center" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1p-Kd-OxD">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1p-Kd-OxD">
                                     <rect key="frame" x="229" y="0.0" width="114" height="116"/>
                                     <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                     <state key="normal" image="Collapse"/>
@@ -158,7 +164,7 @@
                                         <action selector="applyFilter3:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ig1-8h-0LN"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="center" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJB-BV-FyE">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jJB-BV-FyE">
                                     <rect key="frame" x="343" y="0.0" width="115" height="116"/>
                                     <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                     <state key="normal" image="Firewall"/>
@@ -166,7 +172,7 @@
                                         <action selector="applyFilter4:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lIY-nm-7If"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="center" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gUZ-Ir-tNo">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gUZ-Ir-tNo">
                                     <rect key="frame" x="458" y="0.0" width="115" height="116"/>
                                     <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                     <state key="normal" image="Kidney"/>
